--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Check formatting
         run: pnpm format:check
 
+      - name: Generate Prisma Client
+        run: pnpm --filter @devradar/server db:generate
+
       - name: Lint
         run: pnpm lint
 
