--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@devradar/shared": "workspace:*",
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.2.0",
     "@fastify/helmet": "^13.0.2",
     "@fastify/jwt": "^10.0.0",
